Add technical report class

--- a/map/listings.tex
+++ b/map/listings.tex
@@ -1,4 +1,4 @@
-\renewcommand{\lstlistingname}{Code sample}% Listing -> Code sample
+\renewcommand{\lstlistingname}{Code}% Listing -> Code sample
 \renewcommand{\lstlistlistingname}{Table of \lstlistingname s}
 
 
