--- a/cls/common.sty
+++ b/cls/common.sty
@@ -6,7 +6,7 @@
 \RequirePackage[normalem]{ulem}            % provides \ul for underlining
 \RequirePackage[UKenglish]{babel}          % Multilingual support & language settings
 \RequirePackage{tocloft}                   % Provides control over the ty­pog­ra­phy of the Ta­ble of Con­tents etc.
-\RequirePackage[automake]{glossaries}
+\RequirePackage[automake, acronym, toc]{glossaries}
 \RequirePackage[useregional]{datetime2}    % Allows use of \today
 \RequirePackage{titlesec}                  % Select alternative section titles
 \RequirePackage{xcolor}                    % Driver-independent colour extensions for LaTeX
@@ -126,4 +126,4 @@
 
 \newglossary{symbols}{sym}{sbl}{List of Abbreviations and Symbols}
 \makeglossary
-\input{gloss}
+\input{map/gloss}
