--- a/map/main.tex
+++ b/map/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt, a4paper]{cls/technical_report}
+\documentclass{cls/technical_report}
 \usepackage{geometry}
 \usepackage{wrapfig}
 \usepackage{subcaption}
