Improve technical report

--- a/cls/common.sty
+++ b/cls/common.sty
@@ -68,9 +68,9 @@
 
 \definecolor{burgundy}{rgb}{0.5, 0.0, 0.13}
 
-% \sectionfont			{\fontsize{14}{16}\selectfont}
-% \subsectionfont		{\fontsize{11}{12}\selectfont}
-% \subsubsectionfont{\fontsize{10}{11}\selectfont}
+\sectionfont			{\fontsize{14}{16}\selectfont}
+\subsectionfont		{\fontsize{11}{12}\selectfont}
+\subsubsectionfont{\fontsize{10}{11}\selectfont}
 \useunder{\uline}{\ul}{}
 % ~~~~~~~~~~~~~~~~~~~
 
@@ -116,8 +116,11 @@
     Creator={\pdfCreator{}},
     Producer={\pdfProducer{}},
     },
-  colorlinks,
+  % colorlinks,
   hidelinks,
+  hyperfigures,
+  pagebackref,
+  backref=slide,
   pdfnewwindow=true,
   linktoc=all,
   pdfborder=0 0 0,
