--- a/cls/technical_report.cls
+++ b/cls/technical_report.cls
@@ -25,6 +25,7 @@
 \RequirePackage{amsmath}                  % American Mathematical Society mathematical facilities
 \RequirePackage{amssymb}                  % American Mathematical Society symbols
 \RequirePackage{mathtools}                % Mathematical tools to use with amsmath
+\RequirePackage{parskip}
 % \RequirePackage{geometry}                 % Flexible and complete interface to document dimensions
 \RequirePackage{sectsty}                  % Allows stylistic changes of headers
 
@@ -48,7 +49,7 @@
 
 % ~~~~~ Headings ~~~~~
 \renewcommand{\thesection}{\Roman{section}}
-\renewcommand{\thesubsection}{\thesection.\Roman{subsection}}
+% \renewcommand{\thesubsection}{\thesection.\Roman{subsection}}
 
 
 \definecolor{burgundy}{rgb}{0.5, 0.0, 0.13}
@@ -56,9 +57,12 @@
 \titleformat{\section}{\Large\color{burgundy}}{\thesection}{1em}{\sffamily}
 % \titleformat{\section}[display]{\center\Huge}{{\uppercase\expandafter{\thesection}}}{0em}{\sffamily}
 
-% \titleformat{\subsection}{\normalfont}{\thesubsection}{1em}{}
 % \titleformat{\subsection}{\centering}{\normalfont\thesubsection}{0em}{\\\sffamily}
-\titleformat{\subsection}{\centering}{}{0em}{\sffamily}
+% \titleformat{\subsection}{\centering}{}{0em}{\sffamily}
+\titleformat{\subsection}{\normalfont}{\thesubsection}{1em}{\sffamily}
+
+\titleformat{\subsubsection}{\normalfont}{\thesubsubsection}{1em}{\sffamily}
+
 \titlespacing\section{0pt}{12pt plus 4pt minus 2pt}{0pt plus 2pt minus 2pt}
 
 % ~~~~~~~~~~~~~~~~~~~
